Added Li, Ul, Nav links, Article Images, Even list items , and main images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>  
     </section>
 
-    <section>
+    <section id="fan-favorites">
       <div class="wrapper">
         <h2>Top 5 Fan Favourites</h2>
 
